--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">AISCemetery</string>
+    <string name="app_name">AIS Cemetery</string>
+    <string name="select_start_date">Дата от</string>
+    <string name="select_end_date">Дата до</string>
 </resources>
